--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/img/site/Recimo-logo-R-black.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>recimo-recipe-project</title>
+    <title>Recimo</title>
 
   </head>
   <body>
